fix gap at the bottom of top menu
default ul line height was creating a gap so set this to prevent

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -290,6 +290,7 @@ form {
         li {
             margin-left: 0px;
         }
+        line-height: 31px;
         height: auto;
         max-height: 1000em;
         /*@include transition(max-height 1s ease-in-out);*/
